feat: optimize performance for mobile devices
- Reduce 3D rendering complexity on mobile (disable shadows/antialias, lower DPR)
- Decrease particle count on mobile (500 vs 1000)
- Add mobile detection for conditional rendering
- Lazy load heavy 3D components
- Memoize components to prevent unnecessary re-renders
- Add performance monitoring in dev mode
- Respect prefers-reduced-motion for accessibility
- Optimize animations with will-change and viewport-based triggers
- Add FPS counter for development monitoring
- Fix footer alignment and contact form issues

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -115,6 +115,7 @@
         "subject": "What would you like to talk about?",
         "message": "Tell me more about your project or idea..."
       },
+      "contactNote": "*leave your contact in the message*",
       "button": {
         "send": "Send Message",
         "sending": "Sending Message..."
